2 days of work, still finishing up logic on replacing strings pulled from array.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html>
 
 <head>
+<meta charset="UTF-8">
 <title>Hangman Game - Basic Version</title>
 <link href = "assets/css/reset.css" rel="stylesheet" type="text/css">
 <link href = "assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+<p>Guesses Left: <span id="guesses-left"></span></p>
+<p>Guesses Made: <span id="guesses-made"></span></p>
+<p>Wins: <span id="win-counter"></span></p>
+<p>Losses: <span id="loss-counter"></span></p>
+<h3 id="word-blank"></h3>
 
 <script src = "assets/javascript/game.js"></script>
 </body>
