Changed initial music, added loading p element for the preload.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body onload="loading()">
     <!--Function call for loading screen-->
-    <div id="loader"></div>
+    <div id="loader"><p>Loading... Please Wait</p></div>
     <!--Loading screen template/guide from w3schools, replaced animated CSS with fixed image-->
     <div class="animate-bottom" id="content" style="display:none;">
         <!--Header Area-->
@@ -30,7 +30,7 @@
         <div class="well col-lg-4">
             <audio autoplay="autoplay" id="incorrect" src=""></audio>
             <audio autoplay="autoplay" id="correct" src=""></audio>
-            <audio autoplay="autoplay" id="end" src="assets/media/epic.mp3"></audio>
+            <audio autoplay="autoplay" id="end" src="assets/media/alphacentauri.mp3"></audio>
             <p id="lives">Guesses Left: <span id="guesses-left"></span></p>
             <p id="guesses">Guesses Made: <span id="guesses-made"></span></p>
             <p id="wins">Wins: <span id="win-counter"></span></p>
