Made <span> element for loading screen to make sound input disclaimer to come up differently from <p> element.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 <body onload="loading()">
     <!--Function call for loading screen-->
-    <div id="loader"><p>Loading... Please Wait... (Be sure to turn on Sound!)</p></div>
+    <div id="loader"><p>Loading... Please Wait... </p>
+    <span>(Be sure to turn on Sound!)</span></div>
     <!--Loading screen template/guide from w3schools, replaced animated CSS with fixed image-->
     <div class="animate-bottom" id="content" style="display:none;">
         <!--Header Area-->
